vlib/v/checker/tests/inner_functions_call_before_define.vv
fn main() {
	_ := f()
	go f()

	f := fn () string { return "hello" }
	_ := f() // avoid warnings
}
